Revert "logging-service-logback is JPMS module"